airs\refac(front): #3384 replace rules with skims
- Replace Rules in the Products section of the menu with Skims


Former-commit-id: 7f637f5f498813593d8201a3a60fe5811673db5c

--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -40,6 +40,10 @@
             href="{{ SITEURL }}/products/forces/">
             Forces
           </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/products/skims/">
+            Skims
+          </a><br>
         </div>
       </div>
       <div class="pt4-l b dib-xl display-none v-top tl mh2">
