--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -44,8 +44,8 @@
                         </a>
                       </li>
                       <li class="mv1">
-                        <a href="{{ SITEURL }}/products/rules/" class="menulink white roboto no-underline nowrap">
-                          Rules
+                        <a href="{{ SITEURL }}/products/skims/" class="menulink white roboto no-underline nowrap">
+                          Skims
                         </a>
                       </li>
                     </ul>
@@ -295,8 +295,8 @@
                           </li>
                           <li class="pv2">
                             <a class="hv-fluid-rd f5 c-fluid-bk fw4 no-underline menu-txt-trans roboto"
-                                href="{{ SITEURL }}/products/rules/">
-                                Rules
+                                href="{{ SITEURL }}/products/skims/">
+                                Skims
                             </a>
                           </li>
                         </ul>
@@ -589,7 +589,7 @@
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/integrates/">Integrates</a>
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/drills/">Drills</a>
           <a class="f-key-features fw4" href="{{ SITEURL }}/products/forces/">Forces</a>
-          <a class="f-key-features fw4" href="{{ SITEURL }}/products/rules/">Rules</a>
+          <a class="f-key-features fw4" href="{{ SITEURL }}/products/skims/">Skims</a>
         </div>
       </li>
     </ul>
