airs\refac(front): #3416 skims key benefits titles
- Some titles of Skims' Key Benefits were modified.


Former-commit-id: 52a1d381dd77c86b74924d93c6edb12e290890ba

--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -174,7 +174,7 @@
         </li>
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
-            Low Rates
+            Accuracy
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
             Produces low false positives rates.
@@ -182,7 +182,7 @@
         </li>
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
-            Easy Integration
+            Integration
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
             Can be easily integrated into the CI/CD pipelines of your whole SDLC.
@@ -229,7 +229,7 @@
       <ul class="tr-l tl roboto list pl0 mw-20 fr-l">
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
-            Closure
+            Tracking
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
             Tracks remediation, confirming when each vulnerability has been
@@ -247,7 +247,7 @@
         </li>
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
-            Optimum
+            Complementation
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
             Perfectly complements the other Fluid Attacks products to optimize
