integrates\refac(front): #793.3 update button css
- Update button css
- Update button component calls
- Update button tests


Former-commit-id: 00c4d4fcede8d743de78180e22efcccd0a1af6d7

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -320,6 +320,10 @@ label {
   stroke: #FFFFFF !important;
 }
 
+:global .b--orgred {
+  border-color: #FF3435;
+}
+
 :global .b--sb,
 :global .b--sb:active,
 :global .b--sb:focus,
@@ -372,6 +376,10 @@ label {
 :global .o-bd[disabled],
 :global .o-bd[disabled]:hover {
   opacity: 1;
+}
+
+:global .orgred {
+  color: #FF3435;
 }
 
 :global .pv2-5 {
