airs\refac(cross): #3427 skims is sast and sca
- SCA was added to Skims on three sections.


Former-commit-id: 09e33a6965217b16f311b203ca5cc6f26333c331

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -151,10 +151,10 @@
             skims
           </h2>
           <h3 class="c-fluid-bk roboto fw7 f4 mv0 tr-l tc lh-18">
-            The SAST Element that Identifies Superficial Vulnerabilities
+            The Automatic Element that Identifies Superficial Vulnerabilities
           </h3>
           <p class="c-fluid-bk roboto fw1 f5 lh-2 tr-l tl">
-            <strong class="b">Skims</strong> is a SAST tool that searches and
+            <strong class="b">Skims</strong> is a SAST/SCA tool that searches and
             detects superficial or peripheral vulnerabilities in your IT systems
             at high speed. It can also automatically verify whether
             vulnerabilities have been successfully repaired.
