--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -115,7 +115,7 @@
 <div class="flex justify-center items-center ph-body">
   <div class="mw7 center">
     <p class="roboto f3-l f4 fw3 lh-2">
-      <b class="fw6">Skims</b> is Fluid Attacks’ SAST tool in charge of
+      <b class="fw6">Skims</b> is Fluid Attacks’ SAST/SCA tool in charge of
       searching and detecting superficial or peripheral vulnerabilities in your
       IT systems through an easy, accurate, and fast execution.
       <b class="fw6">Skims</b> can be part of your entire SDLC and send
