airs\refac(cross): #3177.3 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: 782761b440ece1e7533b63ccb91b3586cdce6613

--- a/airs/theme/2020/templates/about-us/people.html
+++ b/airs/theme/2020/templates/about-us/people.html
@@ -96,13 +96,13 @@
           </div>
           <div class="fr-l tl pl4-l mw6 w-45-l">
             <h2 class="c-fluid-bk fw7 f2 mv0 tl lh-18">
-              Fluid Attacks Team
+              Fluid Attacks
             </h2>
             <p class="c-fluid-bk fw3 f-solution lh-2 tl f3">
               We are a dedicated and enthusiastic company.
               We are focused on software hacking,
               finding vulnerabilities in a wide range of information systems
-              comprehensively and passionately, and ASAP for all our clients.
+              comprehensively, passionately and quickly for all our clients.
             </p>
           </div>
         </div>
@@ -120,9 +120,9 @@
             </h2>
             <p class="c-fluid-bk fw3 f-solution lh-2 tl f3">
               Our highly certified experts make up a robust red team
-              divided into some sub-teams, depending on their specialties.
-              They are always attacking, testing, and also developing
-              new applications or tools.
+              divided into sub-teams, depending on their specialties.
+              They are continuously attacking and testing,
+              as well as developing new applications or tools.
             </p>
           </div>
         </div>
@@ -139,11 +139,11 @@
               Product & Projects Teams
             </h2>
             <p class="c-fluid-bk fw3 f-solution lh-2 tl f3">
-              Besides having experts helping our clients
-              discover their risks, we have professionals who
-              provide them with sufficient guidance with the
-              products and solutions in their projects to offer
-              their users secure systems.
+              In addition to having experts helping our clients
+              discover their risks, we also have professionals who
+              provide them with sufficient guidance regarding
+              the products and solutions in their projects
+              in order to offer their users secure systems.
             </p>
           </div>
         </div>
@@ -160,11 +160,10 @@
               Marketing & Sales Teams
             </h2>
             <p class="c-fluid-bk fw3 f-solution lh-2 tl f3">
-              All previous experts work alongside other marketing
-              and sales professionals who, with their extensive
-              knowledge and commitment, end up giving enough
-              support for Fluid Attacks to stand out from its
-              competitors.
+              All above-mentioned experts work alongside our marketing
+              and sales professionals who,
+              thanks to their extensive knowledge and commitment,
+              enable us to stand out from our competitors.
             </p>
           </div>
         </div>
