integrates\refac(front): #793.7 deleteformatter css
- Add new css functions
- Remove unused css
- Update deleteformatter css


Former-commit-id: ba09ef740346862dca052f41e3ff5b9e71204da5

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -403,3 +403,8 @@ label {
   width: 16px !important;
   height: 16px !important;
 }
+
+:global .svg-box20 svg {
+  width: 20px !important;
+  height: 20px !important;
+}
