integrates\refac(front): #793.8 update preloader css
- Add new css functions
- Remove unused css
- Update preloader css


Former-commit-id: 7e026edbfabef0c7a784635bdb6d5956575c393c

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -355,6 +355,10 @@ label {
   background: transparent !important;
 }
 
+:global .bottom-15 {
+  bottom: 15rem;
+}
+
 :global .cna-bd[disabled],
 :global .cna-bd[disabled]:hover {
   cursor: not-allowed;
@@ -375,6 +379,15 @@ label {
 
 :global .f2-5 {
   font-size: 1.75rem;
+}
+
+:global .img-box {
+  height: 100px;
+  width: 100px;
+}
+
+:global .left-5 {
+  left: 5rem;
 }
 
 :global .montserrat {
