integrates\refac(front): #793.10 statusformatter css
- Update projecteventsview tests
- Update statusformatter css


Former-commit-id: 35817fff928fff095ed5f2357a79151b65c271c9

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -340,6 +340,22 @@ label {
   background-color: #FF3435;
 }
 
+:global .bg-lbl-gray {
+  background-color: #707070;
+}
+
+:global .bg-lbl-green {
+  background-color: #259800;
+}
+
+:global .bg-lbl-red {
+  background-color: #FF2222;
+}
+
+:global .bg-lbl-yellow {
+  background-color: #FFBF00;
+}
+
 :global .bg-ns {
   background-color: #525A5C !important;
 }
