integrates\feat(back): #3399.18 starlette app login path
- Added proxy-headers option to gunicor to serve static files


Former-commit-id: ce7aa42519ecff1d58092dc4c3ef398906237ab0

--- a/integrates/backend_new/templates/HTTP500.html
+++ b/integrates/backend_new/templates/HTTP500.html
@@ -18,7 +18,7 @@
         <h1>OOPS.<small>Error 500</small></h1>
         <p class="lead">Something happens internally.<br />
 Our powerful engineering team has been dispatched to solve the problem.</p>
-	<img width=30% src="{{ url_for('static', path='/error.gif') }}" alt="error"/>
+	<img width=30% src="{{ url_for('static', path='/imgs/error.gif') }}" alt="error"/>
     </div>
     <script>
         function Redirect()
