--- a/integrates/backend_new/templates/login.html
+++ b/integrates/backend_new/templates/login.html
@@ -7,43 +7,28 @@
       }
     </script>
     {% if not debug %}
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
+      <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
     {% endif %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="google-signin-client_id" content="65328559770-aatq8b00rvk05qn2h523hn328drt9ehc.apps.googleusercontent.com">
     <link rel="shortcut icon" href="{{ url_for('static', path='/imgs/favicon.ico') }}">
     <title>Integrates | Fluid Attacks</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pixeden-stroke-7-icon@1.2.3/pe-icon-7-stroke/dist/pe-icon-7-stroke.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:300,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
     {% if 'localhost' in request.get_host and debug %}
       <link rel="stylesheet" href="https://localhost:3000/dashboard/app-style.min.css" type="text/css">
     {% endif %}
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/imgs/error.gif') }}">
-    <!-- Start of Delighted survey script -->
-    <script defer src="{{ url_for('static', path='/delighted.js') }}" type="text/javascript"></script>
-    <!-- End of Delighted survey script -->
-    <!-- Start of fluidattacks Zendesk Widget script -->
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=dc2bbf98-b773-4e25-ac9f-6cb800f7d293"></script>
-    <!-- End of fluidattacks Zendesk Widget script -->
-    <script type="text/javascript">
-      zE(function() {
-        zE.setLocale("en-US");
-        zE.identify({
-          name: fullName,
-          email: userEmail
-        });
-      });
-    </script>
+    <style> body { background-color: #272727; }</style>
   </head>
-  <body>
+  <body id="FluidIntegrates">
+    <iframe title="Frame 1" hidden></iframe><iframe title="Frame 2" hidden></iframe><iframe title="Frame 3" hidden></iframe>
     <div id="root"></div>
     {% if 'localhost' in request.get_host and debug %}
       <script src="https://localhost:3000/dashboard/app-bundle.min.js" type="text/javascript"></script>
     {% endif %}
-    <script src="https://rum-static.pingdom.net/pa-5ae7406129ccc50006000057.js" async></script>
   </body>
 </html>
