integrates\refac(front): #793.12 environmentfields css
- Delete unused css
- Update environmentfields css


Former-commit-id: ec8a0cb8211951d4ceea1c783442714ed5ec58c7

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -410,6 +410,11 @@ label {
   left: 5rem;
 }
 
+:global .mh--5 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+
 :global .montserrat {
   font-family: 'Montserrat', sans-serif;
 }
