--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -11,13 +11,23 @@
           alt="Fluid Attacks logo">
           Start with Fluid Attacks
         </p>
-        <p class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
+        <p class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb2">
           <img
           class="nb3"
           loading="lazy"
           src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
           alt="Fluid Attacks logo">
           Contact us
+        </p>
+      </div>
+      <div class="tc dib-l w-100 pv2">
+        <img
+        class="nb3 dib-l w4"
+        loading="lazy"
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/owasp-logo.png"
+        alt="OWASP logo">
+        <p class="c-fluid-bk roboto b f-key-features fw7 mt0 mh2 pb4 dib-l">
+          We are proud corporate member of The OWASP Foundation
         </p>
       </div>
     </div>
