airs\refac(front): #3466 add owasp partnership
- Added OWASP partnership phrase in the slideshow


Former-commit-id: 38c7359858a412a5f3ecfdcc0910498dbb5a350b

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -86,8 +86,16 @@
         </h2>
       </div>
     </div>
+    <div class="mySlides fadein dn">
+      <div>
+        <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
+          We are proud corporate member of The OWASP Foundation
+        </h2>
+      </div>
+    </div>
   </div>
   <div class="tc w-100 h1 absolute pt7 mt6">
+    <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
     <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
   </div>
