airs\refac(cross): #3468 update forces texts web
- Forces' texts on the website have been fixed and updated.


Former-commit-id: 01a3c7debd451a0f7e9ea6ef5cb8b037e2d02876

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -224,8 +224,7 @@
             <strong class="b">Forces</strong> allows you to implement
             DevSecOps into your project.
             It breaks the build to force the remediation
-            of confirmed deep, re-opened and new peripheral vulnerabilities.
-            It can also verify your post-deploy production status.
+            of confirmed deep, re-opened and new vulnerabilities.
           </p>
           <a class="c-fluid-bk no-underline hv-fluid-dkred f5 roboto fw1" href="{{ SITEURL }}/products/forces/">
             Learn More <span class="c-dkred">></span>
