--- a/airs/theme/2020/templates/products/forces.html
+++ b/airs/theme/2020/templates/products/forces.html
@@ -115,14 +115,14 @@
 <div class="flex justify-center items-center ph-body">
   <div class="mw7 center">
     <p class="roboto f3-l f4 fw3 lh-2">
-    <b class="fw7">Forces</b> can be included as part of a continuous integration
-    pipeline. It constitutes an essential element for the implementation of DevSecOps
-    in projects. Thus, any changes to the Target of Evaluation (ToE) can be
-    continuously tested against the closing of confirmed vulnerabilities.
+    <b class="fw7">Forces</b> is constituted as an essential element
+    for the implementation of DevSecOps in projects.
+    It verifies the status of your vulnerabilities and breaks the build
+    to force the remediation of open and unaccepted vulnerabilities.
     Forces can be included in CI/CD (Continuous Integration/Continuous
-    Deployment) environments as a security gate, and performs Dynamic and Static
-    Application Security Testing (DAST - SAST) and dynamic testing of many
-    protocols (DXST).
+    Deployment) environments as a security gate.
+    Thus, any changes to the Target of Evaluation (ToE) can be
+    continuously tested against the closing of confirmed vulnerabilities.
     </p>
     <div class="tl-l tc">
       <div class="tc dib-l pr2-l pv0-l pv3">
@@ -174,7 +174,8 @@
             Break the Build
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
-            Forces supports vulnerability closing by breaking the build.
+            Support vulnerability status checks
+            and break the build if vulnerabilities are open.
           </p>
         </li>
         <li class="c-fluid-bk pv3">
@@ -182,7 +183,8 @@
             Status
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
-            Identify the status of known vulnerabilities in your system.
+            Identify the confirmed status
+            of known vulnerabilities in your system.
           </p>
         </li>
         <li class="c-fluid-bk pv3">
@@ -228,16 +230,17 @@
             Deployment
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
-            Confidence to deploy changes to production without known
-            vulnerabilities.
+            Confidence to deploy changes
+            to production without known vulnerabilities.
           </p>
         </li>
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
-            Findings
+            Cycle
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
-            Interactive cycle for the vulnerability closing process.
+            Interactive cycle for the vulnerability closing process
+            (Drills or Skims required).
           </p>
         </li>
       </ul>
