airs\refac(front): #3486 fix owasp membership mssg
- I have fixed the message of our OWASP membership.


Former-commit-id: d01b2d4c2b12d6d80a63390e02cdcd83a11675cc

--- a/airs/theme/2020/templates/footer.html
+++ b/airs/theme/2020/templates/footer.html
@@ -27,7 +27,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/owasp-logo.png"
         alt="OWASP logo">
         <p class="c-fluid-bk roboto b f-key-features fw7 mt0 mh2 pb4 dib-l">
-          We are proud corporate member of The OWASP Foundation
+          We are a proud corporate member of the OWASP Foundation
         </p>
       </div>
     </div>
