--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -89,7 +89,7 @@
     <div class="mySlides fadein dn">
       <div>
         <h2 class="white center roboto w-100 tc ph3 f1-l f2 lh-solid mw7">
-          We are proud corporate member of The OWASP Foundation
+          We are a proud corporate member of the OWASP Foundation
         </h2>
       </div>
     </div>
