airs\refac(front): #3488 fix ebook broken link
- I have fixed the link for the eBook on Home and Resources.


Former-commit-id: 63ba47711173bd45f65cb551c95658638f71f6bc

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -297,7 +297,7 @@
       Hacking with speed and precision
     </h3>
     <div class="tc">
-      <a href="https://usa.fluidattacks.com/ebook/">
+      <a href="https://landing.fluidattacks.com/us/ebook/">
         <button class="bg-transparent pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
       </a>
     </div>
