--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -282,7 +282,7 @@
           <br>
         </p>
         <div class="pv4 tc">
-          <a href="https://usa.fluidattacks.com/ebook/">
+          <a href="https://landing.fluidattacks.com/us/ebook/">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
         </div>
