--- a/integrates/backend_new/templates/login.html
+++ b/integrates/backend_new/templates/login.html
@@ -19,16 +19,20 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,700|Source+Sans+Pro:300,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
-    {% if 'localhost' in request.get_host and debug %}
+    {% if '127.0.0.1' in request.client.host and debug %}
       <link rel="stylesheet" href="https://localhost:3000/dashboard/app-style.min.css" type="text/css">
+    {% else %}
+      <script src="{{ css }}" type="text/css"></script>
     {% endif %}
     <style> body { background-color: #272727; }</style>
   </head>
   <body id="FluidIntegrates">
     <iframe title="Frame 1" hidden></iframe><iframe title="Frame 2" hidden></iframe><iframe title="Frame 3" hidden></iframe>
     <div id="root"></div>
-    {% if 'localhost' in request.get_host and debug %}
+    {% if '127.0.0.1' in request.client.host and debug %}
       <script src="https://localhost:3000/dashboard/app-bundle.min.js" type="text/javascript"></script>
+    {% else %}
+      <script src="{{ js }}" type="text/javascript"></script>
     {% endif %}
   </body>
 </html>
