airs\refac(front): #3491 resources remove spanish
- The word 'Spanish' has been removed from Webinars' descriptions.


Former-commit-id: 9e59f4b6cec2d83f0b11dee4ae672b698e6129f0

--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -170,7 +170,7 @@
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           How to Develop Products With Speed
-          Without Sacrificing Security? (Spanish).
+          Without Sacrificing Security?
         </p>
         <div class="pv4 tc">
           <a href="https://www.gotostage.com/channel/d38612ee120645cd93ac5ef7f65119f6/recording/287e90418c824496b67638480010f2b4/watch">
@@ -367,7 +367,7 @@
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          What data tells us about continuous hacking (Spanish).
+          What data tells us about continuous hacking.
           <br>
         </p>
         <div class="pv4 tc">
@@ -391,7 +391,7 @@
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Learn how you can go beyond the OWASP Top 10
-          in security testing (Spanish).
+          in security testing.
         </p>
         <div class="pv4 tc">
           <a href="https://register.gotowebinar.com/register/3618185313140820236">
@@ -415,7 +415,7 @@
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           How would our software look
-          if agile constructions were the norm? (Spanish).
+          if agile constructions were the norm?
         </p>
         <div class="pv4 tc">
           <a href="https://register.gotowebinar.com/register/6501685343309054732">
