integrates\refac(front): #793.15 modal css
- Update modal css
- Update modal test


Former-commit-id: 7684e45bf8651679f314ba06d8e69bb027d8e3d2

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -449,6 +449,18 @@ label {
   margin-right: -0.5rem;
 }
 
+:global .modalh-bb {
+  border-bottom: 1px solid #E5E5E5;
+}
+
+:global .modalf-bt {
+  border-top: 1px solid #E5E5E5;
+}
+
+:global .modalf-pa {
+  padding: 1.5rem;
+}
+
 :global .montserrat {
   font-family: 'Montserrat', sans-serif;
 }
