integrates\refac(front): #793.16 eventheader css
- Update eventheader css
- Update eventcontent css
- Update contenttab css


Former-commit-id: 61fcfa7d638ebb76ee7083d4cb8e9ad15e63381d

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -465,6 +465,10 @@ label {
   font-family: 'Montserrat', sans-serif;
 }
 
+:global .nav-active-bg {
+  background-color: #EEEEEE !important;
+}
+
 :global .o-bd[disabled],
 :global .o-bd[disabled]:hover {
   opacity: 1;
@@ -472,6 +476,11 @@ label {
 
 :global .orgred {
   color: #FF3435;
+}
+
+:global .ph1-5 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 :global .pv2-5 {
