airs\fix(back): #3510 fix script order in the web
- Set the cookiebot script as the first script to execute in all pages
- Set the cookie message in all the pages


Former-commit-id: 2ae39f3c90555e88998a4c9f3eed15a19545aac8

--- a/airs/theme/2020/templates/base.html
+++ b/airs/theme/2020/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="{{ DEFAULT_LANG }}"
       class="sans-pro">
   <head>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
     {% block head %}
       <meta http-equiv="Content-type"
             content="text/html"
@@ -300,6 +301,7 @@
       </div>
     <!-- Footer -->
       {% include "footer.html" %}
+ <!-- Cookie consent -->
 
     <!-- Initialize Animation on Scroll -->
     <script>
