--- a/airs/theme/2020/templates/solution.html
+++ b/airs/theme/2020/templates/solution.html
@@ -147,3 +147,5 @@
   </div>
 </div>
 {% endblock content %}
+<!-- Cookiebot consent message -->
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/9c4480b4-b8ae-44d8-9c6f-6300b86e9094/cd.js" type="text/javascript" async></script>
