--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block meta %}
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
 <meta name="description"
       content="We're a pentesting and ethical hacking company
       that identifies and reports all your applications
@@ -332,5 +331,5 @@
 
 </div>
 {% endblock content %}
- <!-- Cookie consent -->
- <script id="CookieDeclaration" src="https://consent.cookiebot.com/9c4480b4-b8ae-44d8-9c6f-6300b86e9094/cd.js" type="text/javascript" async></script>
+<!-- Cookiebot consent message -->
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/9c4480b4-b8ae-44d8-9c6f-6300b86e9094/cd.js" type="text/javascript" async></script>
