--- a/airs/theme/2020/templates/products/products.html
+++ b/airs/theme/2020/templates/products/products.html
@@ -81,3 +81,6 @@
   {{ page.content }}
 </div>
 {% endblock content %}
+
+<!-- Cookiebot consent message -->
+<script id="CookieDeclaration" src="https://consent.cookiebot.com/9c4480b4-b8ae-44d8-9c6f-6300b86e9094/cd.js" type="text/javascript" async></script>
