--- a/airs/theme/2020/templates/menu.html
+++ b/airs/theme/2020/templates/menu.html
@@ -210,7 +210,7 @@
                     <p class="f5 fw6 c-fluid-bk roboto">
                       FOLLOW FLUID ATTACKS
                       <i>
-                        <img loading="lazy" class="pb3"
+                        <img class="pb3"
                         src="{{ SITEURL }}/theme/images/menu/selector.png"
                         alt="Fluid Selector">
                       </i>
