airs\refac(cross): #3529 fix lifecycle expression
- Some sections' expression 'Life cycle' was changed to 'Lifecycle.'


Former-commit-id: 56f9d3c7da0ac1241eb32154c6af736b4131d0d8

--- a/airs/theme/2020/templates/services/continuous.html
+++ b/airs/theme/2020/templates/services/continuous.html
@@ -3,10 +3,10 @@
 <meta name="description"
       content="Our Continuous Hacking detects and reports
       all the vulnerabilities and security issues
-      during the whole software development life cycle.">
+      during the whole software development lifecycle.">
 <meta name="keywords"
       content="Fluid Attacks, Services, Continuous Hacking,
-      Ethical Hacking, Security, Software Development Life Cycle">
+      Ethical Hacking, Security, Software Development Lifecycle">
 {% endblock meta %}
 
 {% block title %}
