--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -139,26 +139,9 @@
 <h2 class="roboto c-fluid-bk f1 fw6 tc pt6">Key Benefits</h2>
 <div class="w-100 flex-l pv4">
   <div class="w-100">
-    <div class="w-50-l fl-l tl ph0-ns ph4" data-aos="fade-right">
+    <div class="w-50-l fl-l tl ph0-ns ph-body" data-aos="fade-right">
       <img
-      class="dn show-xl"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-xl.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-l"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-l.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-ml"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-ml.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-m"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-m.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-s"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1-s.png"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-1.png"
       alt="Young hacker smiling">
     </div>
     <div class="w-50-l fr-l ph-body">
@@ -203,29 +186,13 @@
 </div>
 <div class="w-100 flex pv4">
   <div class="w-100">
-    <div class="w-50-l fr-l tr ph0-ns ph4" data-aos="fade-left">
+    <div class="w-50-l fr-l tr ph0-l ph-body" data-aos="fade-left">
       <img
-      class="dn show-xl fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-xl.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-l fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-l.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-ml fr"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-ml.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-m ml-auto"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-m.png"
-      alt="Young hacker smiling">
-      <img
-      class="dn show-s"
-      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2-s.png"
+      class="fr-l"
+      src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/skims/skims-screen-2.png"
       alt="Young hacker smiling">
     </div>
-    <div class="w-50-l fl-l ph-b">
+    <div class="w-50-l fl-l ph-body">
       <ul class="tr-l tl roboto list pl0 mw-20 fr-l">
         <li class="c-fluid-bk pv3">
           <h3 class="f3 fw6 mv0">
